--- a/friendvest/assets/css/global.css
+++ b/friendvest/assets/css/global.css
@@ -36,7 +36,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  /* .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
@@ -65,7 +65,7 @@
     --destructive-foreground: 210 40% 98%;
 
     --ring: 212.7 26.8% 83.9%;
-  }
+  } */
 }
 
 @layer base {
